create new features

--- a/client/app/shoppingCart/shoppingCart.html
+++ b/client/app/shoppingCart/shoppingCart.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12 shopping-cart" style="margin-top: 30px;font-size: 13px" ng-init="vm.init()">
+<div class="col-lg-12 shopping-cart" style="margin-top: 50px;margin-bottom: 85px;font-size: 13px" ng-init="vm.init()">
     <!--<img ng-src="http://localhost:3000/server/public/picture/21UULo9MmfL._AC_SR160,160_.jpg">-->
     <div class="col-lg-3 panel panel-default">
         <div class="panel-heading">
