--- a/client/index.html
+++ b/client/index.html
@@ -10,30 +10,36 @@
     </header>
     <body ng-app="app">
         <div  ui-view></div>
-
+        <!--bower-->
         <script src="/bower_components/angular/angular.min.js"></script>
         <script src="/bower_components/jquery/dist/jquery.min.js"></script>
         <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
         <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-
+        <!--lib-->
+        <script src="/client/app/components/lib/lib.js"></script>
+        <!--router-->
+        <script src="/client/app/app.router.js"></script>
+        <!--module-->
         <script src="/client/app/app.module.js"></script>
         <script src="/client/app/components/components.module.js"></script>
         <script src="/client/app/services/services.module.js"></script>
         <script src="/client/app/components/popOver/popOver.module.js"></script>
-        <script src="/client/app/homePage/homePage.module.js"></script>
         <script src="/client/app/layout/layout.module.js"></script>
         <script src="/client/app/shareUtil/util.module.js"></script>
-        <script src="/client/app/components/popOver/popOver.directive.js"></script>
-        <script src="/client/app/components/lib/lib.js"></script>
-        <script src="/client/app/layout/layout.directive.js"></script>
+        <script src="/client/app/homePage/homePage.module.js"></script>
         <script src="/client/app/shoppingCart/shoppingCart.module.js"></script>
         <script src="/client/app/proceedCheckout/proceedCheckout.module.js"></script>
-        <script src="/client/app/app.router.js"></script>
+        <script src="/client/app/myAccount/myAccount.module.js"></script>
+        <!--directive-->
+        <script src="/client/app/components/popOver/popOver.directive.js"></script>
+        <script src="/client/app/layout/layout.directive.js"></script>
         <script src="/client/app/homePage/homePage.directive.js"></script>
         <script src="/client/app/shoppingCart/shoppingCart.directive.js"></script>
         <script src="/client/app/proceedCheckout/proceedCheckout.directive.js"></script>
+        <script src="/client/app/myAccount/myAccount.directive.js"></script>
+        <!--service-->
         <script src="/client/app/services/shoppingCart.service.js"></script>
         <script src="/client/app/shareUtil/util.service.js"></script>
     </body>
