create new features

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
         <script src="/client/app/feature/myAccount/myAccount.module.js"></script>
         <script src="/client/app/feature/lists/lists.module.js"></script>
         <script src="/client/app/feature/ownedItems/ownedItems.module.js"></script>
+        <script src="/client/app/feature/messageCenter/messageCenter.module.js"></script>
         <!--directive-->
         <script src="/client/app/components/popOver/popOver.directive.js"></script>
         <script src="/client/app/feature/layout/layout.directive.js"></script>
@@ -42,6 +43,9 @@
         <script src="/client/app/feature/proceedCheckout/proceedCheckout.directive.js"></script>
         <script src="/client/app/feature/myAccount/myAccount.directive.js"></script>
         <script src="/client/app/feature/ownedItems/ownedItems.directive.js"></script>
+        <script src="/client/app/feature/messageCenter/messageCenter.directive.js"></script>
+        <script src="/client/app/feature/messageCenter/messageInbox.directive.js"></script>
+        <script src="/client/app/feature/messageCenter/messageSent.directive.js"></script>
         <!--service-->
         <script src="/client/app/services/shoppingCart.service.js"></script>
         <script src="/client/app/shareUtil/util.service.js"></script>
