--- a/client/app/feature/messageCenter/messageCenter.html
+++ b/client/app/feature/messageCenter/messageCenter.html
@@ -3,7 +3,7 @@
 		<div class="sidebar">
 			<ul>
 				<li><a ui-sref='shareeconomy.messageCenter.inbox'>Inbox</a></li>
-				<li><a ui-sref='shareeconomy.messageCenter.sent'>Sent</a></li>
+				<li><a ui-sref='shareeconomy.messageCenter.sent' style="border-top:none">Sent</a></li>
 			</ul>
 		</div>
 		<div class="btn-group" style="margin-top: 30px">
