--- a/client/app/feature/myAccount/myAccount.html
+++ b/client/app/feature/myAccount/myAccount.html
@@ -165,7 +165,7 @@
                             </uib-accordion-heading>
                             <button class="btn btn-lg btn-danger" ng-show="false">Create Your Owned Factory</button>
                             <button class="btn btn-group-sm btn-danger" ng-show="true" ui-sref='shareeconomy.ownedItems'>
-                                Go To Your Factory
+                                Go To Your Stall
                             </button>
                         </uib-accordion-group>
                     </uib-accordion>
