--- a/client/app/feature/ownedItems/ownedItems.html
+++ b/client/app/feature/ownedItems/ownedItems.html
@@ -178,15 +178,26 @@
             </div>
         </div>
     </div>
-    <panel class='col-lg-2 control-panel' style='background-color: #f6f6f6;position: fixed;right:30px;height:400px;padding:10px 10px;color:#b3b3b3'>
-    <h7>Control Panel</h7>
+    <panel class='col-lg-2 wish-board'>
+    <h7>Wish Board</h7>
     <hr/ style='margin-top: 1px'>
-    <span class="glyphicon glyphicon-circle-arrow-right"></span>
-    <span class="glyphicon glyphicon-circle-arrow-right"></span>
-    <span class="glyphicon glyphicon-circle-arrow-right"></span>
+    <ul class="fa-ul">
+        <li>
+            <i class="fa fa-bell faa-ring animated" style="color: red;cursor:pointer;"></i><span style="color: black;"> practically new Ipod</span>
+        </li>
+        <li>
+            <i class="fa fa-bell"></i><span> brand new laptop</span>
+        </li>
+        <li>
+            <i class="fa fa-bell"></i> <span> flight tickes to China</span>
+        </li>
+        <li>
+            <i class="fa fa-bell faa-ring animated" style="color: red;cursor:pointer;"></i> <span style="color: black;"> Play Dota in this Firady night</span>
+        </li>
+    </ul>
     <hr/ style='margin-top: 50px'>
-    <button class="btn btn-sm btn-warning">
-        Add New Item
+    <button class="btn btn-sm btn-info">
+        Edit Wish Board
     </button>
     </panel>
 
