--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,9 @@
         <base href="/">
         <!--<link rel="stylesheet" href="http://usmlrs1297.arrow.com:7781/snap/assets/ui/styles/snap.css">-->
         <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="/client/style/app.css">
+        <link rel="stylesheet" href="/bower_components/font-awesome-animation/dist/font-awesome-animation.min.css">
 
     </header>
     <body ng-app="app">
