--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,7 @@
         <script src="/client/app/feature/messageCenter/messageCenter.directive.js"></script>
         <script src="/client/app/feature/messageCenter/messageInbox.directive.js"></script>
         <script src="/client/app/feature/messageCenter/messageSent.directive.js"></script>
+        <script src="/client/app/feature/lists/wishList.directive.js"></script>
         <!--service-->
         <script src="/client/app/services/shoppingCart.service.js"></script>
         <script src="/client/app/shareUtil/util.service.js"></script>
