--- a/client/app/feature/lists/wishList.html
+++ b/client/app/feature/lists/wishList.html
@@ -1,6 +1,6 @@
 <div ng-init='vm.init()'>
 	<div class="col-lg-9" style="margin-bottom:100px;margin-left:30px;margin-top: 60px;">
-		<div class="col-lg-2 btn-group">
+		<!-- <div class="col-lg-2 btn-group">
             <button class="btn btn-sm btn-info">
                 Public
             </button>
@@ -13,7 +13,7 @@
 
         <panel style='margin-left: 50px'>
         	<a style="background-color: #337ab7;color:white;padding:10px 10px;cursor: default;font-size: 18px">Public Wish List</a>
-        </panel>
+        </panel> -->
 		<div class="col-lg-12">
 	            <div class="progress col-lg-1">
 	                <img src="../server/public/picture/item_pencil.jpg" style="width:100%" class="img-thumbnail">
