--- a/client/app/feature/myAccount/myAccount.html
+++ b/client/app/feature/myAccount/myAccount.html
@@ -161,11 +161,11 @@
                     <uib-accordion>
                         <uib-accordion-group is-open="vm.isOpen.ownedItems">
                             <uib-accordion-heading>
-                                <span style="font-size: 13px">Manage Your Items</span> <i style="font-size: 13px" class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                <span style="font-size: 13px">Manage Your Dashboard</span> <i style="font-size: 13px" class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                             </uib-accordion-heading>
-                            <button class="btn btn-lg btn-danger" ng-show="false">Create Your Owned Factory</button>
+                            <!-- <button class="btn btn-lg btn-danger" ng-show="false">Create Your Owned Factory</button> -->
                             <button class="btn btn-group-sm btn-danger" ng-show="true" ui-sref='shareeconomy.ownedItems'>
-                                Go To Your Stall
+                                Go To Your Dashboard
                             </button>
                         </uib-accordion-group>
                     </uib-accordion>
