--- a/client/app/feature/ownedItems/ownedItems.html
+++ b/client/app/feature/ownedItems/ownedItems.html
@@ -1,5 +1,8 @@
-<div ng-init="vm.init()" class="owned-items" >
-    <div class="col-lg-9" style="margin-bottom:100px;margin-left:30px">
+<div ng-init="vm.init()" class="owned-items">
+    <div class="col-lg-8" style="margin-bottom:50px;margin-left:30px;margin-top: 30px">
+        <panel style='margin-left: 50px'>
+            <a style="background-color: #f8f8f8;color:black;padding:10px 10px;cursor: default;font-size: 15px">Your Owned Items Want To Be Traded </a>
+        </panel>
         <div style="float:right">
             <button class="btn btn-sm btn-info">
                 Add New Item
@@ -129,91 +132,60 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-12" style="margin-top: 30px">
-            <div class="progress col-lg-1">
-                <img src="../server/public/picture/Accessories_SBNV_Hero4_2016._CB297387379_.jpg" style="width:100%" class="img-thumbnail">
-                <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
-                     style="width:100%">
-                    New Added
-                </div>
-            </div>
-            <div class="col-lg-7" style="padding:10px 40px;font-size: 16px">
-                <div>SD Card</div>
-                <div>item Id: 1021434</div>
-                <div style="font-size: 80%;margin-top:10px">
-                    <div>
-                        <label style="display:inline-block;">Preferred EST Price:</label> <span>15$ </span>
-
-                        <label style="border-left:1px solid lightgrey;display:inline-block;padding-left: 10px">Collected By:</label> <span>5 customers </span>
-
-                        <label style="border-left:1px solid lightgrey;display:inline-block;padding-left: 10px">Bargain With:</label> <span>2 customers </span>
-                        <br>
-                        <label style="display:inline-block;">Brand New Item in Market:</label> <span>18$ </span>
-                        <br>
-                        <i
-                                class="glyphicon"
-                                style="cursor:pointer"
-                                ng-click="vm.openDetail()"
-                                ng-class="{'glyphicon-chevron-down': vm.status.item1DetailOpen, 'glyphicon-chevron-right': !vm.status.item1DetailOpen}">
-                        </i>
-                        <label>Items Description</label>
-                        <!--<button class="btn btn-xs btn-info">Edit</button>-->
-                        <br>
-                        <panel class="col-lg-12" ng-show="vm.status.item1DetailOpen">
-                            <ul>
-                                <li>
-                                    his Certified Refurbished product is tested & certified by HP to look and work like-new.
-                                </li>
-                                <li>
-                                    TThe product includes all original accessories, and is backed by a 90-Day warranty.
-                                    AMD Quad-Core A8-6410 Processor up to 2.4GHz Frequency, 4GB DDR3 RAM (2 slots, 1 user accessible), 750G HDD;
-                                </li>
-                                <li>
-                                    15.6" HD BrightView Display with WLED Backlighting 1366x768, AMD Radeon R5 Built-in Graphics;
-                                </li>
-                                <li>
-                                    SuperMulti DVD Burner, HD Webcam with Mic, 1 USB 3.0 Port, 2 USB 2.0 Ports, 1 HDMI Port, 802.11b/g/n WiFi;
-                                    Genuine Windows 7 Home Premium 64-bit, English.
-                                </li>
-                            </ul>
-                        </panel>
-                    </div>
-                </div>
-                <!--<br>-->
-                <!--<pre>Added: 07/05/2016</pre>-->
-                <!--<pre>Modified: 07/12/2016</pre>-->
-            </div>
-            <div class="col-lg-3">
-                <div class="btn-group" style="margin-top:50px">
-                    <button class="btn btn-xs btn-info">Edit</button>
-                    <button class="btn btn-xs btn-danger">Remove</button>
-                    <button class="btn btn-xs btn-success">See Comments</button>
-                </div>
-            </div>
-        </div>
     </div>
-    <panel class='col-lg-2 wish-board'>
-    <h7>Wish Board</h7>
-    <hr/ style='margin-top: 1px'>
-    <ul class="fa-ul list-group">
-        <li class="list-group-item" style="background-color:#337ab7">
-            <i class="fa fa-bell faa-ring animated faa-slow" style="color: red;cursor:pointer;"></i><span style="font-weight: bold;color:white"> practically new Ipod</span>
-        </li>
-        <li class="list-group-item">
-            <i class="fa fa-bell"></i><span> brand new laptop</span>
-        </li>
-        <li class="list-group-item">
-            <i class="fa fa-bell"></i> <span> flight tickes to China</span>
-        </li>
-        <li class="list-group-item" style="background-color:#337ab7">
-            <i class="fa fa-bell faa-ring animated faa-slow" style="color: red;cursor:pointer;"></i> <span style="font-weight: bold;color:white"> Play Dota in this Firady night</span>
-        </li>
-    </ul>
-    <hr/ style='margin-top: 50px'>
-    <button class="btn btn-sm btn-info">
-        Edit Wish Board
-    </button>
-    </panel>
+    <div class='col-lg-3 wish-board' style="float:right">
+        <div class="" style="text-align: center;background-color: #f8f8f8;color:black;font-weight: bold">
+            Menu
+        </div>
+        <div class="" style="padding:0px 0px;overflow: scroll">
+            <br>
+            <h7>Wish Board</h7>
+            <br><br>
+            <ul class="fa-ul list-group">
+                <li class="list-group-item" style="background-color:#337ab7">
+                    <i class="fa fa-bell faa-ring animated faa-slow" style="color: red;cursor:pointer;"></i><span style="font-weight: bold;color:white"> practically new Ipod</span>
+                </li>
+                <li class="list-group-item">
+                    <i class="fa fa-bell"></i><span> brand new laptop</span>
+                </li>
+                <li class="list-group-item">
+                    <i class="fa fa-bell"></i> <span> flight tickes to China</span>
+                </li>
+                <li class="list-group-item" style="background-color:#337ab7">
+                    <i class="fa fa-bell faa-ring animated faa-slow" style="color: red;cursor:pointer;"></i> <span style="font-weight: bold;color:white"> Play Dota in this Firady night</span>
+                </li>
+            </ul>
+            <button class="btn btn-sm btn-info">
+                Edit Wish Board
+            </button>
+            <hr/ style='margin-top: 10px'>
+            <h7 style='color:black'>Activity</h7> <span class="badge" style="float:right"> 41</span> 
+            <br><br>
+            <ul class="fa-ul list-group">
+                <li class="list-group-item">
+                    <span> You remove the Item Laptop. </span> <span style="color:#b3b3b3;font-size: 12px"> 10/29/2017</span>
+                </li>
+                <li class="list-group-item">
+                    <span> You and a new Item pencil. </span> <span style="color:#b3b3b3;font-size: 12px"> 10/1/2017</span>
+                </li>
+                <li class="list-group-item">
+                     <span> YinYu Niu comments on your items</span> <span style="color:#b3b3b3;font-size: 12px"> 10/1/2017</span>
+                </li>
+                <li class="list-group-item">
+                     <span> Play Dota in this Firady night</span> <span style="color:#b3b3b3;font-size: 12px"> 10/1/2017</span>
+                </li>
+                <li class="list-group-item">
+                     <span> Play Dota in this Firady night</span> <span style="color:#b3b3b3;font-size: 12px"> 10/1/2017</span>
+                </li>
+                <li class="list-group-item">
+                    <span><a ui-sref='shareeconomy.messageCenter.inbox({messageBoxType:"systemMessages"})'>See all 41 activities ...</a></span>
+                </li>
+            </ul>
+            
+            <hr/ style='margin-top: 30px'>
+        </div>
+        
+    </div>
 
 
     <!--<div class="col-lg-2">-->
