create new feature

--- a/client/app/feature/accountReviewByVisitors/visitorReview.html
+++ b/client/app/feature/accountReviewByVisitors/visitorReview.html
@@ -1,5 +1,5 @@
-<div ng-init=vm.init() style="background-image: url(../server/public/picture/background-7.jpg);background-size: cover;margin-top: -20px;padding:30px 0px">
-	<div class="panel panel-info col-lg-10 div-center">
+<div ng-init=vm.init() style="background-image: url(../server/public/picture/background-7.jpg);background-size: cover;margin-top: -20px;padding:30px 0px; width:100%;margin-bottom: -20px" class="visitorReview">
+	<div class="panel panel-info col-lg-11 div-center">
 		<div class="panel-heading">
 			<div style="float:none;display: inline-block;">
 	            <img src="../server/public/picture/Desktops_SBNV_Hero6_2016._CB297392653_.jpg"
@@ -7,6 +7,8 @@
 	                 class="img-thumbnail">
 	        </div>
 	        <div style="display: inline-block;margin-left: 30px"><span>MOYU LIANG's ACCOUNT</span></div>
+	        <div style="display: inline-block;margin-left: 30px"><button class="btn btn-info btn-sm">Contact Info</button></div>
+	        <div style="display: inline-block;margin-left: 10px"><button class="btn btn-info btn-sm">Leave Message</button></div>
 		</div>
 		<div class="panel-body">
 			<div class="col-lg-4">
@@ -32,6 +34,116 @@
 				<div style="padding-left: 20px;float:left;padding-bottom: 5px">Wait Bids</div>
 				<div style="padding-left: 20px;float:right;padding-bottom: 5px;padding-right: 20px"><span style="font-size: 20px">5</span></div>
 				<hr style="margin-top: -2px;clear:both" />
+			</div>
+			<div class="col-lg-12" style="padding-top: 30px">
+				<table class="table table-info">
+					<thead>
+						<tr>
+							<td>MOYU LIANG's Wishes</td>
+							<td>Potential Traders #</td>
+							<td>Create Date</td>
+							<td>Exp Date</td>
+							<td>His Trading Items</td>
+							<td>&nbsp;</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>practically new Ipod</td>
+							<td><a>3</a></td>
+							<td>05/27/2016</td>
+							<td>07/27/2016</td>
+							<td><a>Brand New HP 29 inches Monitor</a></td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>
+						<tr>
+							<td>flight tickes to China</td>
+							<td><a>3</a></td>
+							<td>05/27/2016</td>
+							<td>06/20/2016</td>
+							<td><a>House Design CAD</a></td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>
+						<tr>
+							<td>Play Dota in this Firady night</td>
+							<td><a>1024</a></td>
+							<td>05/27/2016</td>
+							<td>12/27/2016</td>
+							<td><a>Google Software Engeneers Positions' Ref</a></td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>	
+					</tbody>
+				</table>
+			</div>
+			<div class="col-lg-12" style="margin-top:20px">
+				<hr/>
+				<table class="table table-info table-strip">
+					<thead>
+						<tr>
+							<td>MOYU LIANG's Items</td>
+							<td>Customer Biddings #</td>
+							<td>Create Date</td>
+							<td>Exp Date</td>
+							<td>Market EST Price</td>
+							<td>&nbsp;</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Brand New HP 29 inches Monitor</td>
+							<td><a>13</a></td>
+							<td>05/27/2016</td>
+							<td>07/27/2016</td>
+							<td>$307</td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>
+						<tr>
+							<td>House CAD Design</td>
+							<td><a>11</a></td>
+							<td>05/27/2016</td>
+							<td>06/20/2016</td>
+							<td>$45 / hour</td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>
+						<tr>
+							<td>Google Software Engeneers Positions' Ref</td>
+							<td><a>104</a></td>
+							<td>05/27/2016</td>
+							<td>12/27/2016</td>
+							<td>Unvalue</td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>	
+						<tr>
+							<td>USB Cable</td>
+							<td><a>104</a></td>
+							<td>05/27/2016</td>
+							<td>12/27/2016</td>
+							<td>$14</td>
+							<td>
+								<button class="btn btn-info btn-xs">Interested</button>
+								<button class="btn btn-info btn-xs">Bid On This</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 	</div>
