--- a/client/app/feature/homePage/homePage.html
+++ b/client/app/feature/homePage/homePage.html
@@ -92,7 +92,7 @@
                         <br>
                         <div class="panel panel-default" >
                             <div class="panel-heading">
-                                &nbsp;
+                                
                                 <a>Item {{$index+1}}</a>
                                 <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
                                 <!-- <a class="glyphicon glyphicon-shopping-cart"
@@ -101,8 +101,8 @@
                                    uib-popover="{{(!vm[item.headerId+'isAdd'])?'add to':'delete from'}} cart"
                                    popover-trigger="mouseenter">
                                 </a> -->
-                                &nbsp;
-                                <button class="btn btn-warning btn-xs">Move To Wish List</button>
+                                <br>
+                                <a> Move To Wish List</a>
                                 <!-- <a class="glyphicon glyphicon-trash"
                                    ng-click="vm.deleteWishListItems($index,item.headerId)"
                                    uib-popover="delete from wish list"
