--- a/client/app/feature/myAccount/myAccount.html
+++ b/client/app/feature/myAccount/myAccount.html
@@ -1,4 +1,4 @@
-<div ng-init="vm.init()" class="my-account">
+<div ng-init="vm.init()" class="my-account" style="margin-bottom: 100px">
     <div style="width: 100%;height:160px;background-color: #f6f6f6;margin-top:-20px;border-bottom:1px solid #777">
         <div class="col-lg-2" style="border-right:1px black solid;margin-top:10px;margin-left:20px">
             <img
@@ -16,12 +16,12 @@
         <div class="col-lg-2" style="margin-top: 10px">
             <h4>Wish List</h4>
             <span style="display:block">Items: {{11}}</span>
-            <a style="margin-top: 20px">Explore</a>
+            <a style="margin-top: 20px" ui-sref='shareeconomy.wishList'>Explore</a>
         </div>
         <div class="col-lg-2" style="margin-top: 10px">
             <h4>Waiting List</h4>
             <span style="display:block">Items: {{2}}</span>
-            <a style="margin-top: 20px">Explore</a>
+            <a style="margin-top: 20px" ui-sref='shareeconomy.waitList'>Explore</a>
         </div>
         <!--<div class="col-lg-2" style="margin-top: 10px">-->
             <!--<h4>Your Items</h4>-->
@@ -41,6 +41,9 @@
             <!--<button type="button" class="btn btn-sm btn-default" ng-click="isReadonly = ! isReadonly">Toggle Readonly</button>-->
         </div>
     </div>
+
+    <!-- <breadcrumbs></breadcrumbs> -->
+    
     <div class="col-lg-10 div-center" style="margin-top:40px">
         <div class="panel panel-default col-lg-7 div-center" style="border:none;float:none">
             <div class="panel-heading">
