--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="/bower_components/font-awesome-animation/dist/font-awesome-animation.min.css">
 
     </header>
-    <body ng-app="app">
-        <div  ui-view></div>
+    <body ng-app="app" >
+        <div  ui-view ></div>
         <!--bower-->
         <script src="/bower_components/angular/angular.min.js"></script>
         <script src="/bower_components/jquery/dist/jquery.min.js"></script>
@@ -43,6 +43,7 @@
         <script src="/client/app/feature/accountReviewByVisitors/visitorReview.module.js"></script>
         <!--directive-->
         <script src="/client/app/components/popOver/popOver.directive.js"></script>
+        <script src="/client/app/components/breadcrumbs/breadcrumbs.directive.js"></script>
         <script src="/client/app/feature/layout/layout.directive.js"></script>
         <script src="/client/app/feature/homePage/homePage.directive.js"></script>
         <script src="/client/app/feature/shoppingCart/shoppingCart.directive.js"></script>
@@ -53,6 +54,7 @@
         <script src="/client/app/feature/messageCenter/messageInbox.directive.js"></script>
         <script src="/client/app/feature/messageCenter/messageSent.directive.js"></script>
         <script src="/client/app/feature/lists/wishList.directive.js"></script>
+        <script src="/client/app/feature/lists/waitList.directive.js"></script>
         <script src="/client/app/feature/accountReviewByVisitors/visitorReview.directive.js"></script>
         <!--service-->
         <script src="/client/app/services/shoppingCart.service.js"></script>
