create new feature

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
         <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
         <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script src="/bower_components/ngstorage/ngstorage.min.js"></script>
         <script src="/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
         <script src="/node_modules/chart.js/dist/Chart.min.js"></script>
         <script src="/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
@@ -31,8 +32,10 @@
         <script src="/client/app/components/components.module.js"></script>
         <script src="/client/app/services/services.module.js"></script>
         <script src="/client/app/components/popOver/popOver.module.js"></script>
-        <script src="/client/app/feature/layout/layout.module.js"></script>
         <script src="/client/app/shareUtil/util.module.js"></script>
+        <script src="/client/app/feature/signIn/signIn.module.js"></script>
+        <script src="/client/app/feature/registerAccount/registerAccount.module.js"></script>
+        <script src="/client/app/feature/layout/layout.module.js"></script>
         <script src="/client/app/feature/homePage/homePage.module.js"></script>
         <script src="/client/app/feature/shoppingCart/shoppingCart.module.js"></script>
         <script src="/client/app/feature/proceedCheckout/proceedCheckout.module.js"></script>
@@ -44,6 +47,8 @@
         <!--directive-->
         <script src="/client/app/components/popOver/popOver.directive.js"></script>
         <script src="/client/app/components/breadcrumbs/breadcrumbs.directive.js"></script>
+        <script src="/client/app/feature/signIn/signIn.directive.js"></script>
+        <script src="/client/app/feature/registerAccount/registerAccount.directive.js"></script>
         <script src="/client/app/feature/layout/layout.directive.js"></script>
         <script src="/client/app/feature/homePage/homePage.directive.js"></script>
         <script src="/client/app/feature/shoppingCart/shoppingCart.directive.js"></script>
