--- a/client/app/feature/myAccount/myAccount.html
+++ b/client/app/feature/myAccount/myAccount.html
@@ -1,5 +1,5 @@
 <div ng-init="vm.init()" class="my-account" style="margin-bottom: 100px">
-    <div style="width: 100%;height:160px;background-color: #f6f6f6;margin-top:-20px;border-bottom:1px solid #777">
+    <div style="width: 100%;height:160px;background-color: #f6f6f6;border-bottom:1px solid #777">
         <div class="col-lg-2" style="border-right:1px black solid;margin-top:10px;margin-left:20px">
             <img
                     src="../server/public/picture/Desktops_SBNV_Hero6_2016._CB297392653_.jpg"
