create new features

--- a/client/app/feature/lists/waitList.html
+++ b/client/app/feature/lists/waitList.html
@@ -1,6 +1,6 @@
 <div ng-init='vm.init()'>
 	<div class="col-lg-12">
-        <h4>Reveived Bids</h3>
+        <h3>Reveived Bids</h3>
 		<div class="col-lg-12">
             <div class="progress col-lg-1">
                 <img src="../server/public/picture/31vJcdObkcL._AC_SR160,160_.jpg" style="width:100%" class="img-thumbnail">
@@ -64,7 +64,7 @@
             		</thead>
             		<tbody>
             			<tr>
-            				<td><a ui-sref='shareeconomy.waitList'>Yinyu Niu</a></td>
+            				<td><a ui-sref='shareeconomy.visitorReview'>Yinyu Niu</a></td>
             				<td>Brand New Ipad</td>
             				<td>06/27/2016</td>
             				<td>07/01/2016</td>
