--- a/client/app/feature/registerAccount/registerAccount.html
+++ b/client/app/feature/registerAccount/registerAccount.html
@@ -58,5 +58,6 @@
         <div class="panel-footer" style="background-color: white;padding-top: 20px;text-align: center">
             <span>Already have one? click to <a style="color:#5bc0de;" ui-sref="signIn">sign in...</a></span>
         </div>
+        <div class="alert alert-success" role="alert" ng-show="vm.showSuccessAlert">Register Successfully, <a ui-sref="signIn">direct to sign in page ...</a></div>
     </div>
 </div>
