--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
         <script src="/client/app/feature/messageCenter/messageCenter.directive.js"></script>
         <script src="/client/app/feature/messageCenter/messageInbox.directive.js"></script>
         <script src="/client/app/feature/messageCenter/messageSent.directive.js"></script>
+        <script src="/client/app/feature/messageCenter/date.filter.js"></script>
         <script src="/client/app/feature/lists/wishList.directive.js"></script>
         <script src="/client/app/feature/lists/waitList.directive.js"></script>
         <script src="/client/app/feature/accountReviewByVisitors/visitorReview.directive.js"></script>
