--- a/client/app/feature/messageCenter/messageCenter.html
+++ b/client/app/feature/messageCenter/messageCenter.html
@@ -2,19 +2,24 @@
 	<div class="col-lg-2" style="margin-top: 30px">
 		<div class="sidebar">
 			<ul>
-				<li><a ui-sref='shareeconomy.messageCenter.inbox'>Inbox</a></li>
-				<li><a ui-sref='shareeconomy.messageCenter.sent' style="border-top:none">Sent</a></li>
+				<li><a ui-sref='shareeconomy.messageCenter.inbox'
+					   ng-class="{'message-center-sidebar-active':vm.chooseInbox}"
+					   ng-click="vm.chooseInbox = true">Inbox</a></li>
+				<li><a ui-sref='shareeconomy.messageCenter.sent'
+					   style="border-top:none"
+					   ng-class="{'message-center-sidebar-active':!vm.chooseInbox}"
+					   ng-click="vm.chooseInbox = false">Sent</a></li>
 			</ul>
 		</div>
 		<div class="btn-group" style="margin-top: 30px">
 		    <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
-		    	All Messages <span class="caret"></span>
+		    	{{vm.filterCondition}} <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu">
-		    	<li><a href="#">Last Week</a></li>
-		    	<li><a href="#">Last 30 Days</a></li>
-		    	<li><a href="#">UnRead</a></li>
-		    	<li><a href="#">All</a></li>
+		    	<li><a ng-click="vm.setFilterCondition(7,'One Week')">Last Week</a></li>
+		    	<li><a ng-click="vm.setFilterCondition(30, 'Last 30 Days')">Last 30 Days</a></li>
+		    	<li><a ng-click="vm.setFilterCondition('unread', 'Unread')">UnRead</a></li>
+		    	<li><a ng-click="vm.setFilterCondition('','All Messages')">All</a></li>
 		    </ul>
 		</div>
 	</div>
