--- a/client/app/feature/itemDetail/modal/editCommentModal.html
+++ b/client/app/feature/itemDetail/modal/editCommentModal.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12">
-	<div>
+	<div id="commentModalHeader">
 		<div class="col-lg-2" style="font-weight:bold;font-size:15px">Question: </div>
 		<div class="col-lg-10" style="padding-left:15px">{{vm.questionModalObj.questionTitle}}</div>
 	</div>
@@ -13,18 +13,30 @@
 		</div>
 	</div>
 	<br><br>
-	<div style="clear:both">
+	<div style="clear:both; margin-bottom:30px">
 		<div class="col-lg-1" style="font-weight:bold;font-size:14px">Comment: </div>
 		<div class="col-lg-11" style="float:right;font-size:12px;color:gray;margin-top:30px;">
 			<div style="clear:both" ng-repeat= "comment in vm.answerModalObj.comments">
-				<div style="padding-left:15px;margin-top:20px;">{{comment.commentContent}} <span> <i class="fa fa-pencil" aria-hidden="true" style="padding-left:10px"></i></span></div>
-				<div style="float:right">
+				<div style="padding-left:15px;margin-top:20px;">{{comment.commentContent}} 
+					<a>
+						<i class="fa fa-pencil" aria-hidden="true" style="padding-left:10px" ng-click='vm.replyComment(comment)'></i>
+					</a>
+				</div>
+				<div style="float:right;padding-right:15px;padding-top:10px;text-align:right">
 					- <a>{{comment.commentBy}}</a><br>
-					<div style="margin-bottom:10px">{{comment.date}}</div>
+					<div style="margin-bottom:10px;">{{comment.date}}</div>
 				</div>
 				<hr style="clear:both">
 			</div>
+			<button class="btn btn-xs btn-info" ng-click='vm.addComment()'>Add a Comment</button>
 		</div>
-		
 	</div>
+	<div id='commentField' class="col-lg-12" style="border-top:1px solid lightgray;padding-top:30px;margin-top:20px" ng-show='vm.showCommentField '>
+		<input type="text" class="form-control" style="width: 88%;float:right;margin-bottom:25px;" placeholder="{{vm.commentFieldPlaceholder}}">
+		<div style="float:right">
+			<button class=" button btn btn-xm btn-info" ng-click="vm.submitComment()">Submit</button>
+			<button class="btn btn-xm btn-warning" ng-click="vm.cancelComment()">Cancel</button>
+		</div>
+	</div>
+
 </div>
